syntax = "proto3";

service ClientStatusService {
  rpc Status(StatusRequest) returns (StatusResponse);
}

message StatusRequest {
}

message StatusResponse {
  bool status = 1;
}
